# jarvis

./: .gitignore  LICENSE  README.md  pyproject.toml
doc/: Architecture.md  Debug-8th-Request.md  Debug-Crash.md  Feat-001-First-Step.md  Feat-Claude-Code-Integration.md  Feat-Hotswap-Daemon.md  Feat-RMS-Silence-Detection.md  Feat-STT-Implementation.md  Feat-STT.md  Feat-Stability.md  Feat-Talk-BargeIn.md  Feat-Talk-Fillers.md  Feat-Talk-Latency1.md  Ideas.md  Latency.md  Model-Size.md  Usage.md  big.md  constitution.md  memory.md
doc/ptcgo2/: bench1.md  bench2.md  board.md  dataset_quality.md  export.txt  impl.md  match_42.jsonl  match_525332980.jsonl  poc.md  testunit_normalisation.md  worldmodel.md  worldmodel_v2.1.md  worldmodel_v2.md  worldmodel_v3.1.md  worldmodel_v3.md
doc/ptcgo2/faq/: hyperparameters.md  mlp_head.md  training_loss.md
doc/ptcgo2/v3/: checkpoint.md  conversation.md  data_attack_random_bot.md  model.md  tuning.md
doc/ptcgo2/v4/: playermodel-training.md
doc/ptcgo2/v5/: draft.md  stats.txt  tournois.md
doc/ptcgo2/v6/: 311-damage-subnetwork.md  card_index_map.json  correlation_report.md  correlation_report_b1024.md  correlation_report_b256.md  correlation_report_b4096.md  draft.md  hygiene-result-4096.md  hygiene-result.md  hygiene.md  matchup_matrix.pt  matchup_matrix_b1024.pt  matchup_matrix_raw_b1024.pt  rankings_csharp.csv  run_meta.json  timeout_stats.json  win_rate_wm.pt  win_rate_wm_b1024.pt
panel/: immobilier.md  roles.md
panel/votation-032026/: 01-monnaie-libre-synthèse.md  01-monnaie-libre.txt  02-initiative-ssr.txt  02-ssr-synthèse.md  03-climat-synthese.md  03-fond-climat.md  04-imposition-individuelle.txt  04-synthèse.md
scripts/: play.py  profile.prof  profile_play.py  profile_tts.py  q3tts.py
src/: handlers.py  q3tts_client.py  q3tts_daemon.py
src/jarvis/: __init__.py  cli.py  daemon.py  handlers.py  panel.py  stt.py  talk.py
temp/: crash1.txt
tests/: stability_report.json  stress_test.py
